# localAgent

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  run_agents.py  test_server.py
agents/: orchestrator_agent.py  plan_agent.py  reflect_agent.py  research_agent.py  router_agent.py  utils.py  worker.py
retrieval/: README.md  agentsystem.md  errors.py  rag.py  types_doc.py  zoom.py
retrieval/index/: __init__.py  segment.py
retrieval/local/: extractors.py  loader.py
skills/: skill_editing.md
skills/fitness/: diet.md  workout.md
skills/research/: strategy.md
src/: run_agents.py
src/agents/: observability.py  synthesis_agent.py  worker.py
src/retrieval/: __init__.py  citation.py  llm_select.py  overview.py  pipeline.py  score.py  test_rag.py  test_slot.py  zoom.py
src/retrieval/index/: store.py  summarize.py
src/tools/db/: toolset.py
src/tools/filesystem/: __init__.py  text_ops.py  toolset.py  types.py  validator.py
src/tools/rag/: __init__.py  interceptor.py
src/tools/skills/: __init__.py  toolset.py  types.py  utils.py
tests/tools/filesystem/: conftest.py  test_integration.py  test_tool_calls.py  test_toolset_error.py  test_validator.py
tests/tools/rag/: conftest.py  test_interceptor.py  test_rag_toolset.py
tests/tools/skills/: conftest.py  test_index.py  test_load_skill.py  test_utils.py
tools/filesystem/: errors.py
tools/rag/: interceptor.py  make_doc.py  toolset.py
user_docs/: agentsystem.md
